Bug 332701 build fails in nsDocumentViewer.cpp due to unguarded use of SetUseAltDC if NS_PRINT_PREVIEW undefined r=atremon@elansoftware.com,roc sr=roc